--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-config/ToscaToCIMapping.ini
-Logs/Converter.logs
-tmp/Runbooks1.xlsx
+**/ToscaToCIMapping.ini
+**/Logs/Converter.log
+**/tmp/Runbook1.xlsx
